fin de la partie 8

--- a/Bureau/Symfony/projet_final/app/Resources/views/musee/findOneMusee.html.twig
+++ b/Bureau/Symfony/projet_final/app/Resources/views/musee/findOneMusee.html.twig
@@ -27,11 +27,19 @@
                 {% endfor %}
                 <footer>
                     <p> Site des musee de Paris le : {{ "now"|date('d/m/Y') }}</p>
+
+
+
                 </footer>
             </div>
 
 
+            <h3>Votre avis nous interesse </h3>
 
+            <div class="well">
+
+                {{ form(form) }}
+            </div>
 
 
 
