--- a/Bureau/Symfony/projet_final/app/Resources/views/musee/accueille.html.twig
+++ b/Bureau/Symfony/projet_final/app/Resources/views/musee/accueille.html.twig
@@ -1,6 +1,6 @@
 <html>
 <header>
-    <title> Musees de Paris  </title>
+    <title> PAGE D'ACCUEILLE </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,9 +9,9 @@
 </header>
 <body>
 
-<img src="{{ absolute_url(asset('web/images/Pmusee.jpg')) }}" alt="Symfony!" />
+<h1>HAMMA Belkacem</h1>
 
-<a href="{{ path('musee', {'page': 1}) }}"> <input type="button" value=" Liste des musee de paris "> </a>
+
 
 </body>
 
