--- a/Bureau/Symfony/projet_final/app/Resources/views/musee/findcomment.html.twig
+++ b/Bureau/Symfony/projet_final/app/Resources/views/musee/findcomment.html.twig
@@ -6,3 +6,26 @@
                 {{ form_widget(form) }}
                 {{ form_end(form) }}
                 {% endblock %}
+
+
+
+
+            {% extends 'base.html.twig' %}
+
+{% block html %}
+
+    {% block head %}
+        {% block title %} {% endblock %}
+    {% endblock %}
+
+    {% block body %}
+
+
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        {{ form_end(form) }}
+
+
+
+    {% endblock %}
+{% endblock %}
