--- a/Bureau/Symfony/projet_final/app/Resources/views/default/index.html.twig
+++ b/Bureau/Symfony/projet_final/app/Resources/views/default/index.html.twig
@@ -1,18 +1,186 @@
 <html>
-<header>
+<head>
     <title> Musees de Paris  </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <script src="bootstrap/js/bootstrap.js"></script>
-</header>
+    {% block stylesheets %}
+        {# On charge le CSS de bootstrap depuis le site directement #}
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+        <style>
+            #menu-demo2, #menu-demo2 ul{
+                padding:0;
+                margin:0;
+                list-style:none;
+                text-align:center;
+            }
+            #menu-demo2 li{
+                display:inline-block;
+                position:relative;
+                border-radius:8px 8px 0 0;
+            }
+            #menu-demo2 ul li{
+                display:inherit;
+                border-radius:0;
+            }
+            #menu-demo2 ul li:hover{
+                border-radius:0;
+            }
+            #menu-demo2 ul li:last-child{
+                border-radius:0 0 8px 8px;
+            }
+            #menu-demo2 ul{
+                position:absolute;
+                z-index: 1000;
+                max-height:0;
+                left: 0;
+                right: 0;
+                overflow:hidden;
+                -moz-transition: .8s all .3s;
+                -webkit-transition: .8s all .3s;
+                transition: .8s all .3s;
+            }
+            #menu-demo2 li:hover ul{
+                max-height:15em;
+            }
+            /* background des liens menus */
+            #menu-demo2 li:first-child{
+                background-color: #65537A;
+                background-image:-webkit-linear-gradient(top, #65537A 0%, #2A2333 100%);
+                background-image:linear-gradient(to bottom, #65537A 0%, #2A2333 100%);
+            }
+            #menu-demo2 li:nth-child(2){
+                background-color: #729EBF;
+                background-image: -webkit-linear-gradient(top, #729EBF 0%, #333A40 100%);
+                background-image:linear-gradient(to bottom, #729EBF 0%, #333A40 100%);
+            }
+            #menu-demo2 li:nth-child(3){
+                background-color: #F6AD1A;
+                background-image:-webkit-linear-gradient(top, #F6AD1A 0%, #9F391A 100%);
+                background-image:linear-gradient(to bottom, #F6AD1A 0%, #9F391A 100%);
+            }
+            #menu-demo2 li:last-child{
+                background-color: #CFFF6A;
+                background-image:-webkit-linear-gradient(top, #CFFF6A 0%, #677F35 100%);
+                background-image:linear-gradient(to bottom, #CFFF6A 0%, #677F35 100%);
+            }
+            /* background des liens sous menus */
+            #menu-demo2 li:first-child li{
+                background:#2A2333;
+            }
+            #menu-demo2 li:nth-child(2) li{
+                background:#333A40;
+            }
+            #menu-demo2 li:nth-child(3) li{
+                background:#9F391A;
+            }
+            #menu-demo2 li:last-child li{
+                background:#677F35;
+            }
+            /* background des liens menus et sous menus au survol */
+            #menu-demo2 li:first-child:hover, #menu-demo2 li:first-child li:hover{
+                background:#65537A;
+            }
+            #menu-demo2 li:nth-child(2):hover, #menu-demo2 li:nth-child(2) li:hover{
+                background:#729EBF;
+            }
+            #menu-demo2 li:nth-child(3):hover, #menu-demo2 li:nth-child(3) li:hover{
+                background:#F6AD1A;
+            }
+            #menu-demo2 li:last-child:hover, #menu-demo2 li:last-child li:hover{
+                background:#CFFF6A;
+            }
+            /* les a href */
+            #menu-demo2 a{
+                text-decoration:none;
+                display:block;
+                padding:8px 32px;
+                color:#fff;
+                font-family:arial;
+            }
+            #menu-demo2 ul a{
+                padding:8px 0;
+            }
+            #menu-demo2 li:hover li a{
+                color:#fff;
+                text-transform:inherit;
+            }
+            #menu-demo2 li:hover a, #menu-demo2 li li:hover a{
+                color:#000;
+            }
+            #header{
+                background-color: #3c3c3c ;
+                padding:12px;
+            }
+            #connexion{
+                float: right;
+            }
+
+            </style>
+
+    {% endblock %}
+
+
+</head>
 <body>
 
-<img src="{{ absolute_url(asset('web/images/Pmusee.jpg')) }}" alt="Symfony!" />
+<div  class="col-xs-12" id="header">
 
-<a href="{{ path('musee', {'page': 1}) }}"> <input type="button" value=" Liste des musee de paris "> </a>
 
+<ul id="menu-demo2">
+    <li><a href="#">Lien menu 1</a>
+        <ul>
+            <li><a href="#">lien sous menu 1</a></li>
+            <li><a href="#">lien sous menu 1</a></li>
+            <li><a href="#">lien sous menu 1</a></li>
+            <li><a href="#">lien sous menu 1</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Lien menu 2</a>
+        <ul>
+            <li><a href="#">Lien sous menu 2</a></li>
+            <li><a href="#">Lien sous menu 2</a></li>
+            <li><a href="#">Lien sous menu 2</a></li>
+            <li><a href="#">Lien sous menu 2</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Lien menu 3</a>
+        <ul>
+            <li><a href="#">lien sous menu 3</a></li>
+            <li><a href="#">lien sous menu 3</a></li>
+            <li><a href="#">lien sous menu 3</a></li>
+            <li><a href="#">lien sous menu 3</a></li>
+        </ul>
+    </li>
+    <li><a href="{{ path('musee', {'page': 1}) }}">Nos musees</a>
+        <ul>
+            <li><a href="#">Ile de france</a></li>
+            <li><a href="#">Haut normandie</a></li>
+            <li><a href="#">La Gironde</a></li>
+            <li><a href="#">La savois</a></li>
+        </ul>
+    </li>
+</ul>
+
+
+    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+        <a href="{{ path('fos_user_security_logout') }}">
+            <p  id="connexion" ><button type="button" class="btn btn-success">Déconnection</button> </p>
+        </a>
+    {% else %}
+        <a href="{{ path('fos_user_security_login') }}">
+            <p  id="connexion" ><button type="button" class="btn btn-success">Connexion</button> </p>
+        </a>
+
+        <a href="{{ path('fos_user_registration_register') }}">
+            <p  id="connexion" ><button type="button" class="btn btn-success">Crée un compte</button>
+            </p>
+        </a>
+    {% endif %}
+
+
+</div>
 </body>
 
 </html>
