--- a/Bureau/Symfony/projet_final/app/Resources/views/musee/findOneMusee.html.twig
+++ b/Bureau/Symfony/projet_final/app/Resources/views/musee/findOneMusee.html.twig
@@ -6,10 +6,24 @@
     {# On charge le CSS de bootstrap depuis le site directement #}
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <style>
-        
+
+        .container {
+            margin: 1em auto;
+            max-width: 1200px;
+            box-sizing: border-box;
+        }
+
+        #header{
+            background-color: #3c3c3c ;
+            padding:12px;
+        }
         #Rliste{
             float: left;
         }
+        #connexion{
+            float: right;
+        }
+
     </style>
 
 {% endblock %}
@@ -18,7 +32,14 @@
 		{% block title %} {{ parent() }} - La liste des musees affichés par 10 {% endblock  %}
 
 
+
 		{% block body %}
+            <div  class="col-xs-12" id="header">
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                <a href="{{ path('fos_user_security_logout') }}">
+                    <p  id="connexion" ><button type="button" class="btn btn-success">Déconnection</button> </p>
+                </a>
+            {% endif %}
 
 
                 <div class="row">
@@ -28,7 +49,7 @@
                         <button type="button" id="Rliste" class="btn btn-info" >Retour à la liste </button>
                     </a>
                 </div>
-
+            </div>
 
 
 
@@ -96,12 +117,12 @@
 
                      {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                     <h3>Votre avis nous interesse </h3>
-                    <div class="well">
 
-                        {{ form_start(form) }}
-                        {{ form_widget(form) }}
-                        {{ form_end(form) }}
-                    </div>
+
+
+                         <div class="container">
+                    {{ form(form) }}
+                         </div>
 
 
                         {% endif %}
@@ -144,6 +165,7 @@
 
                     <br><br>
                     <table >
+
             {% for com in commentaires %}
 
                 <tr> <td> <strong>    {{ com.getAuteur() }} : </strong> </td> <td> {{ com.getContenu() }} </td></tr>
