ajout de l'action delete

--- a/Bureau/Symfony/projet_final/app/Resources/views/default/index.html.twig
+++ b/Bureau/Symfony/projet_final/app/Resources/views/default/index.html.twig
@@ -116,6 +116,11 @@
             #connexion{
                 float: right;
             }
+            body{
+                background-image: url("{{ asset('/images/1.jpg') }}");
+                background-size: 100%;
+            }
+
 
             </style>
 
@@ -123,7 +128,7 @@
 
 
 </head>
-<body>
+<body >
 
 <div  class="col-xs-12" id="header">
 
@@ -173,6 +178,10 @@
 
 
 </div>
+
+
+
+
 </body>
 
 </html>
